--- a/mokstats/templates/matches.html
+++ b/mokstats/templates/matches.html
@@ -8,6 +8,7 @@
 	
 		<div data-role="header">
 			<a href="../" data-role="button" data-icon="home" data-iconpos="notext"></a>
+			<a href="../admin/mokstats/match/add/" data-role="button" data-icon="gear" onclick='location.href="../admin/mokstats/match/add/"'>Ny</a>
 			<h1>Kamper (<span id="match_count">{{matches|length}}</span>)</h1>
 		</div>
 		
