Activty page added

--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -14,6 +14,7 @@
 			<a href="./players/" data-role="button">Spillere</a>
 			<a href="./matches/" data-role="button">Kamper</a>
 			<a href="./rating/" data-role="button">Rating</a>
+			<a href="./activity/" data-role="button">Aktivtet</a>
 			<a href="./stats/" data-role="button">Diverse</a>
 		</div>
 	</div>
