Added footer (to frontpage)

--- a/mokstats/static/styles.css
+++ b/mokstats/static/styles.css
@@ -21,6 +21,9 @@
 
 .ui-body-c .ui-link {text-decoration: none;}
 
+footer {
+	font-size: 60%;
+}
 /************************* Match.html *************************/
 table#results {
 	width: 100%;
