--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -17,5 +17,6 @@
 			<a href="./activity/" data-role="button">Aktivtet</a>
 			<a href="./stats/" data-role="button">Diverse</a>
 		</div>
+		{% include "footer.html " %}
 	</div>
 {% endblock %}
