New stats: biggest sized match. Minor Cleanup.

--- a/mokstats/templates/footer.html
+++ b/mokstats/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="center_outer">
 	<div class="center_inner">
-		<a href="http://www.google.no/search?q=Andr%C3%A9+S.+Hansen">André S. Hansen</a>
+		<a href="http://www.google.no/search?q=Andr%C3%A9+Skoglund+Hansen">André Skoglund Hansen</a>
 		<span> | </span>
-		<a href="http://github.com/andrioden/mokstats">source code</a>
+		<a href="http://github.com/andrioden/mokstats">GitHub Source Code</a>
 	</div>
 </footer>
