--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Møkkis Statistikk{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
@@ -14,7 +14,7 @@
 			<a href="./players/" data-role="button">Spillere</a>
 			<a href="./matches/" data-role="button">Kamper</a>
 			<a href="./rating/" data-role="button">Rating</a>
-			<a href="./activity/" data-role="button">Aktivtet</a>
+			<a href="./activity/" data-role="button">Aktivitet</a>
 			<a href="./stats/" data-role="button">Diverse</a>
 		</div>
 		{% include "footer.html " %}
