--- a/mokstats/templates/stats-top-results.html
+++ b/mokstats/templates/stats-top-results.html
@@ -18,7 +18,7 @@
 			    <li>
 			    	<span class="ui-li-count">{{r.sum}}</span>
 			    	<span onclick='$.mobile.changePage("../../../players/{{r.pid}}/")'>{{r.pname}}</span>
-			    	<span class="smaller"><a href="../../../matches/{{r.mid}}/">kampen</a></span>
+			    	<span class="smaller">(<a href="../../../matches/{{r.mid}}/">kampen</a>)</span>
 			    </li>
 			{% endfor %}
 			</ol>
