--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -93,6 +93,7 @@
 						<ul>
 							<li>Høyeste antall poeng oppnådd før Grand er {{extremes.gain.sum}} av <a href="../players/{{extremes.gain.pid}}/">{{extremes.gain.pname}}</a> i <a href="../matches/{{extremes.gain.mid}}/">denne kampen.</a></li>
 							<li>Største reduksjon av poeng etter Grand er {{extremes.loss.sum}} av <a href="../players/{{extremes.loss.pid}}/">{{extremes.loss.pname}}</a> i <a href="../matches/{{extremes.loss.mid}}/">denne kampen.</a></li>
+							<li>Flest spillere i en kamp er {{extremes.match_size.count}}, og skjedde først i <a href="../matches/{{extremes.match_size.id}}/">denne</a> kampen.</li>
 						</ul>
 					</p>
 				</div>
