Checkbox for automatic calc in add match

--- a/mokstats/templates/stats-top-results.html
+++ b/mokstats/templates/stats-top-results.html
@@ -7,7 +7,7 @@
 	<div data-role="page" id="stats_top_results_page">
 	
 		<div data-role="header">
-			<a href="../../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
+			<a href="../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
 			<h1>Sorterte Kampresultater</h1>
 		</div>
 		
