Corrected some navigation

--- a/mokstats/templates/rating-description.html
+++ b/mokstats/templates/rating-description.html
@@ -8,7 +8,7 @@
 	<div data-role="page">
 	
 		<div data-role="header">
-			<a href="../../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
+			<a href="../../" data-role="button" data-icon="home" data-iconpos="notext"></a>
 			<h1>Om rating</h1>
 		</div>
 		
