List with worst/best rounds.

--- a/mokstats/templates/activity.html
+++ b/mokstats/templates/activity.html
@@ -14,6 +14,9 @@
 		{{list}}
 		<div data-role="content">
 			<div id="activity_graph" style="position: relative;"></div>
+			<div style="overflow: hidden;">
+				<p><i class="smaller">OBS. Datomerking før 2013 er ikke nøyaktig, det er en liten mulighet for at noen kamper er registrert på feil måned på grunn av manglende datomerking i notatblokken.</i></p>
+			</div>
 		</div>
 		
 		{% load compress %}
