--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -20,8 +20,8 @@
 					<h3><span class="icon icon_spade left"></span><span class="text left">Spar</span></h3>
 					<p>
 						<ul>
-							<li>Først med dårligste <a href="../matches/{{spades.worst.mid}}/">runde</a>: <a href="../players/{{spades.worst.pid}}/">{{spades.worst.pname}}</a> med {{spades.worst.sum}} poeng.</li>
 							<li>Gjennomsnitt hvis man fikk spa(r): {{spades.average}} poeng.</li>
+							<li>Se de <a href="./top-rounds/?round=spades&amount=20">20 dårligste</a> rundene. Sortert etter dato.</li>
 						</ul>
 					</p>
 				</div>
@@ -30,8 +30,8 @@
 					<h3><span class="icon icon_queen left"></span><span class="text left">Damer</span></h3>
 					<p>
 						<ul>
-							<li>Først med dårligste <a href="../matches/{{queens.worst.mid}}/">runde</a>: <a href="../players/{{queens.worst.pid}}/">{{queens.worst.pname}}</a> med {{queens.worst.sum}} poeng.</li>
 							<li>Gjennomsnitt hvis man fikk dame(r): {{queens.average}} poeng.</li>
+							<li>Se de <a href="./top-rounds/?round=queens&amount=20">20 dårligste</a> rundene. Sortert etter dato.</li>
 						</ul>
 					</p>
 				</div>
@@ -44,7 +44,7 @@
 							<li>Gjennomsnitt av antal strek hvis man fikk en eller flere: {{solitaire_lines.average}} strek.</li>
 							<li>Høyeste antall kort igjen i en <a href="../matches/{{solitaire_cards.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_cards.worst.pid}}/">{{solitaire_cards.worst.pname}}</a> med {{solitaire_cards.worst.sum}} kort.</li>
 							<li>Gjennomsnitt av antal kort hvis man satt igjen med et eller flere: {{solitaire_cards.average}} kort.</li>
-							<li>Dårligste <a href="../matches/{{solitaire_total.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng.</li>
+							<li>Dårligste <a href="../matches/{{solitaire_total.worst.mid}}/">runde</a>: <a href="../players/{{solitaire_total.worst.pid}}/">{{solitaire_total.worst.pname}}</a> med {{solitaire_total.worst.sum}} poeng. Se <a href="./top-rounds/?round=solitaire&amount=20">dårligste20</a>.</li>
 						</ul>
 					</p>
 				</div>
@@ -53,7 +53,7 @@
 					<h3><span class="icon icon_pass left"></span><span class="text left">Pass</span></h3>
 					<p>
 						<ul>
-							<li>Første med dårligste <a href="../matches/{{pass.worst.mid}}/">runde</a>: <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} stikk.</li>
+							<li>Første med dårligste <a href="../matches/{{pass.worst.mid}}/">runde</a>: <a href="../players/{{pass.worst.pid}}/">{{pass.worst.pname}}</a> med {{pass.worst.sum}} stikk. Se <a href="./top-rounds/?round=pass&amount=20">dårligste20</a>.</li>
 						</ul>
 					</p>
 				</div>
@@ -62,7 +62,7 @@
 					<h3><span class="icon icon_grand left"></span><span class="text left">Grand</span></h3>
 					<p>
 						<ul>
-							<li>Først med beste <a href="../matches/{{grand.best.mid}}/">runde</a>: <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med {{grand.best.sum}} stikk.</li>
+							<li>Først med beste <a href="../matches/{{grand.best.mid}}/">runde</a>: <a href="../players/{{grand.best.pid}}/">{{grand.best.pname}}</a> med {{grand.best.sum}} stikk. Se <a href="./top-rounds/?round=grand&amount=20">beste20</a>.</li>
 						</ul>
 					</p>
 				</div>
@@ -71,7 +71,7 @@
 					<h3><span class="icon icon_trumph left"></span><span class="text left">Trumf</span></h3>
 					<p>
 						<ul>
-							<li>Først med beste <a href="../matches/{{trumph.best.mid}}/">runde</a>: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med {{trumph.best.sum}} stikk.</li>
+							<li>Først med beste <a href="../matches/{{trumph.best.mid}}/">runde</a>: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med {{trumph.best.sum}} stikk. Se <a href="./top-rounds/?round=trumph&amount=20">beste20</a>.</li>
 						</ul>
 					</p>
 				</div>
