Om Siden side, viser litt status info. Ryddet.

--- a/mokstats/templates/footer.html
+++ b/mokstats/templates/footer.html
@@ -3,5 +3,7 @@
 		<a href="http://www.google.no/search?q=Andr%C3%A9+Skoglund+Hansen">André Skoglund Hansen</a>
 		<span> | </span>
 		<a href="http://github.com/andrioden/mokstats">GitHub Source Code</a>
+		<span> | </span>
+		<a href="/about">Om Siden</a>
 	</div>
 </footer>
