jquery upgraded, no cdn, trumph stats, dropox status, player unique, ++
- Upgraded jquery mobile version from 1.2.0 to 1.4.4
- Not using CDN for jquery files anymore
- Added dropbox sync status to status page
- Player name is no unique
- More trumph related stats added
- Renamed some buttons and headers

--- a/mokstats/templates/footer.html
+++ b/mokstats/templates/footer.html
@@ -4,6 +4,6 @@
 		<span> | </span>
 		<a href="http://github.com/andrioden/mokstats">GitHub Source Code</a>
 		<span> | </span>
-		<a href="./about/">Om Siden</a>
+		<a href="./system-status/">System Status</a>
 	</div>
 </footer>
