--- a/mokstats/templates/base.html
+++ b/mokstats/templates/base.html
@@ -6,13 +6,13 @@
 	<title>Møkkis stats | {% block title %}{% endblock %}</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery.mobile-1.4.4.min.css" />
 	{% compress css %}
 	<link rel="stylesheet" href="{{ STATIC_URL }}styles.css" />
 	<link rel="stylesheet" href="{{ STATIC_URL }}jqplot/jquery.jqplot.min.css" />
 	{% endcompress %}
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+	<script src="{{ STATIC_URL }}jquery/jquery-1.8.2.min.js"></script>
+	<script src="{{ STATIC_URL }}jquery/jquery.mobile-1.4.4.min.js"></script>
 	{% compress js %}
 	<script src="{{ STATIC_URL }}jqplot/jquery.jqplot.min.js"></script>
 	<script src="{{ STATIC_URL }}jqplot/jqplot.pieRenderer.min.js"></script>
