--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -15,7 +15,7 @@
 			<a href="./matches/" data-role="button">Kamper</a>
 			<a href="./rating/" data-role="button">Rating</a>
 			<a href="./activity/" data-role="button">Aktivitet</a>
-			<a href="./stats/" data-role="button">Diverse</a>
+			<a href="./stats/" data-role="button">Statistikk og Tall</a>
 		</div>
 		{% include "footer.html" %}
 	</div>
