jqplot upgraded, match size stats, ++
- Jquery updated to 2.1.1 and Jqplot upgraded to support this.
- Sort buttons in matches list now has colors again.
- Added new stats page: can view biggest matches by player count.
- Biggest match now correctly rounded to 1 decimal instead of 0
decimals.
- minor stuff++

--- a/mokstats/static/styles.css
+++ b/mokstats/static/styles.css
@@ -77,8 +77,8 @@ span.icon_sum {background-position: -144px -0px;}
 }
 
 /************************* Players *************************/
-.ascending { border: 2px solid red; }
-.descending { border: 2px solid green; }
+a.ascending { border-color: red !important; }
+a.descending { border-color: green !important; }
 
 /************************* Player *************************/
 .jquery_plot_similar_title {
