--- a/mokstats/templates/rating-description.html
+++ b/mokstats/templates/rating-description.html
@@ -37,7 +37,7 @@
 				<li>André har en vinnersjanse på 100/200 = 50%</li>
 				<li>Antatt plassering er 50% av plassering 1 og 2, altså (1+2)/2 = 1,5</li>
 				<li>André vinner og får plassering 1, differansen er 1,5-1 = 0,5</li>
-				<li>Multiplisert med K-verdien (nå {{K_VALUE}}) gir, 0,5*3 = <span id="rating_gained" class="positive"></span> rating vunnet</li>
+				<li>Multiplisert med K-verdien (nå {{K_VALUE}}) gir, 0,5*{{K_VALUE}} = <span id="rating_gained" class="positive"></span> rating vunnet</li>
 				<li>Samme utregning for Tine vil gi tap av samme verdi.</li>
 			</ol>
 			<script>
