--- a/mokstats/templates/match.html
+++ b/mokstats/templates/match.html
@@ -97,9 +97,10 @@
 			// It is scoped to body because thats the only way I was able to have it focused on page load.
 			$("body").off("keypress");
 			$("body").keypress(function (event) {
+				var IsPrevMatch = "{{ prev_match_id }}" != "None";
 				var IsNextMatch = "{{ next_match_id }}" != "None";
 				
-				if (event.keyCode == 37)
+				if (event.keyCode == 37 && IsPrevMatch)
 					$.mobile.pageContainer.pagecontainer("change", "../{{ prev_match_id }}/");
 				else if (event.keyCode == 39 && IsNextMatch)
 					$.mobile.pageContainer.pagecontainer("change", "../{{ next_match_id }}/");
