Title in browser not changed by jquery mobile

--- a/mokstats/templates/base.html
+++ b/mokstats/templates/base.html
@@ -25,5 +25,6 @@
 </head>
 <body>
 	{% block content %}{% endblock %}
+	<script src="{{ STATIC_URL }}prevent_jquery_mobile_title_change.js"></script>
 </body>
 </html>
