--- a/mokstats/templates/index.html
+++ b/mokstats/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 
-{% block title %}Home{% endblock %}
+{% block title %}Forside{% endblock %}
 
 {% block content %}
 	<!-- Start of first page -->
