--- a/mokstats/templates/match.html
+++ b/mokstats/templates/match.html
@@ -91,6 +91,8 @@
 			{% endif %}
 		</div>
 		
+		{% load compress %}
+		{% compress js inline %}
 		<script>
 			// Jquery mobile does not completely load a new page when navigating, instead it is appended to a cached page list.
 			// This is why we have to remove previously added keypress listeners before adding the new one.
@@ -106,6 +108,6 @@
 					$.mobile.pageContainer.pagecontainer("change", "../{{ next_match_id }}/");
 			});
 		</script>
-
+		{% endcompress %}
 	</div>
 {% endblock %}
