Removed dropbox sync status, mail alert settings
- Failed to be able to correctly detect dropbox sync status since it is
dependent on checking in the context of the root user.
- Added default settings for email alert

--- a/mokstats/templates/stats.html
+++ b/mokstats/templates/stats.html
@@ -74,8 +74,8 @@
 						<ul>
 							<li>Først med beste <a href="../matches/{{trumph.best.mid}}/">runde</a>: <a href="../players/{{trumph.best.pid}}/">{{trumph.best.pname}}</a> med {{trumph.best.sum}} stikk. Se <a href="./top-rounds/?round=trumph&amount=20">beste20</a>.</li>
 							<li>Gjenomsnitt hvis man valgte trumf: {{trumph.average_for_trumph_picker}}</li>
-							<li>Gjenomsnitt samlet: {{trumph.average}}</li>
-							<li>Kamper der trumf velgeren ikke tapte: {{trumph.saved_count}}/{{match_count}} ({{trumph.saved_percent}}%)</li>
+							<li>Gjenomsnitt for alle: {{trumph.average}}</li>
+							<li>Kamper der trumf velgeren ikke tapte: {{trumph.saved_count}} ({{trumph.saved_percent}}%)</li>
 						</ul>
 					</p>
 				</div>
