Project liftet to Django 1.11 and migrated to being GAE friendly

--- a/mokstats/templates/footer.html
+++ b/mokstats/templates/footer.html
@@ -1,9 +1,7 @@
 <footer class="center_outer">
 	<div class="center_inner">
-		<a href="http://www.google.no/search?q=Andr%C3%A9+Skoglund+Hansen">André Skoglund Hansen</a>
+		<a href="https://github.com/Andrioden">André S. Hansen</a>
 		<span> | </span>
-		<a href="http://github.com/andrioden/mokstats">GitHub Source Code</a>
-		<span> | </span>
-		<a href="./system-status/">System Status</a>
+		<a href="http://github.com/andrioden/mokstats">Source Code</a>
 	</div>
 </footer>
