Stats calculation top calculations made generic and non-sql and much reformating of views.py file. Closes #5

--- a/mokstats/templates/stats-biggest-match-sizes.html
+++ b/mokstats/templates/stats-biggest-match-sizes.html
@@ -23,7 +23,7 @@
 			{% endfor %}
 			</ol>
 			<div>
-				<p><i class="smaller">Listen er sortert sekundert etter dato.</i></p>
+				<p><i class="smaller">Listen er sortert sekundært etter dato.</i></p>
 			</div>
 		</div>
 	</div>
