--- a/mokstats/templates/stats-result-list.html
+++ b/mokstats/templates/stats-result-list.html
@@ -23,7 +23,7 @@
 			{% endfor %}
 			</ol>
 			<div>
-				<p><i class="smaller">Listen er sortert etter dato.</i></p>
+				<p><i class="smaller">Listen er sortert sekundært etter dato.</i></p>
 			</div>
 		</div>
 	</div>
