Rating page link to description should now show, removed overflow hidden

--- a/mokstats/templates/rating.html
+++ b/mokstats/templates/rating.html
@@ -24,7 +24,7 @@
 			<div class="center_outer">
 				<div id="ratings_graph" class="graph center_inner"></div>
 			</div>
-			<div style="overflow: hidden;">
+			<div>
 				<p><i class="smaller">Les om hvordan ratingen blir regnet ut <a href="./description/">her</a>.</i></p>
 			</div>
 		</div>
